[package]
name = "umdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
eyre = "0.6.8"
itertools = "0.10.5"
once_cell = "1.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
