[package]
name = "umdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
cached = "0.40.0"
compact_str = "0.7.1"
derive_more = "0.99.17"
eyre = "0.6.8"
futures = "0.3.24"
itertools = "0.10.5"
multimap = "0.9.1"
once_cell = "1.15.0"
ordered-float = { version = "3.6.0", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.11.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rustc-hash = "1.1.0"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }

[profile.release]
debug = true
